# orbitwatch

./: .env.example  .gitignore  README.md  docker-compose.easypanel.yml  docker-compose.prod.yml  docker-compose.yml
agent/OrbitWatchAgent/: OrbitWatchAgent.csproj  Program.cs  Worker.cs  appsettings.json
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 829af4c2cd78_initial.py
backend/app/: audit.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py  seed.py  tasks.py
backend/app/admin/: router.py
backend/app/agents/: router.py
backend/app/alerts/: router.py
backend/app/auth/: router.py
backend/app/dashboard/: router.py
backend/app/exports/: router.py
backend/app/instruments/: router.py
backend/app/processing/: peak_detection.py  telemetry.py  xic.py
backend/app/realtime/: manager.py
backend/app/reports/: router.py
backend/app/samples/: router.py
backend/app/sequences/: router.py
backend/app/services/: alert_service.py  dashboard_service.py  export_service.py  ingestion.py  report_service.py  sample_service.py  sequence_service.py  target_service.py
backend/app/target_lists/: router.py
backend/tests/: conftest.py  test_auth.py
docs/: deployment.md  easypanel.md  instrument-connection.md  xcalibur-integration.md
frontend/: nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
infrastructure/: Caddyfile
scripts/: replay_simulator.py  test_targets.csv
(+39 files in other folders)
