[project]
name = "orbitwatch-backend"
version = "1.0.0"
description = "OrbitWatch central backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<0.112",
    "uvicorn[standard]>=0.30,<0.31",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg2-binary>=2.9,<3",
    "redis>=5.0,<6",
    "dramatiq[redis,watch]>=1.17,<2",
    "argon2-cffi>=23.1,<24",
    "python-jose[cryptography]>=3.3,<4",
    "python-multipart>=0.0.9,<0.1",
    "email-validator>=2.1,<3",
    "python-dotenv>=1.0,<2",
    "httpx>=0.27,<0.28",
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<0.24",
    "factory-boy>=3.3,<4",
    "numpy>=1.26,<2",
    "scipy>=1.13,<2",
    "pandas>=2.2,<3",
    "openpyxl>=3.1,<4",
    "reportlab>=4.2,<5",
    "boto3>=1.34,<2",
    "molmass>=2024.10.25",
]

[project.optional-dependencies]
dev = ["ruff>=0.5", "mypy>=1.10"]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
ignore_missing_imports = true
